css/style.css
/* ... */
@supports not (line-height: clamp( 1.5625rem , 1.2644508671rem  +  1.2716763006vw , 2.25rem )) {
  .hero__desc {
    line-height: calc(1.5625rem + 0.6875 * (100vw - 23.4375rem) / 54.0625);
  }
}
.hero__tags {
  justify-content: center;
}
.hero__tags .tag {
  cursor: pointer;
}
.hero__paggination.swiper-pagination {
  max-width: 170px;
  min-height: 20px;
  margin: 0 auto;
  width: 100%;
  display: flex;
  align-items: center;
}

.swiper-pagination-bullet {
  width: 20px;
  height: 20px;
  position: relative;
}
.swiper-pagination-bullet:not(:last-child) {
  margin-right: 10px;
}
.swiper-pagination-bullet::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 15px;
  height: 15px;
  border: 2px solid #fff;
  border-radius: 50%;
}
.swiper-pagination-bullet::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  border-radius: 50%;
  background-color: #feff80;
}

.swiper-pagination-bullet-active::after {
  display: block;
}

.couple-images {
  max-width: 100%;
}
.couple-images_big .couple-images__big-image,
.couple-images_big .couple-images__small-image {
  max-width: 77.2131147541%;
}
.couple-images_big .couple-images__big-image {
  padding-bottom: 33.7704918033%;
}
.couple-images_big .couple-images__small-image img {
  border-radius: 7px;
}
.couple-images__inner {
  display: flex;
  position: relative;
}
.couple-images__big-image {
  max-width: 89.3442622951%;
  padding-bottom: 40px;
}
.couple-images__big-image img {
  width: 100%;
  object-fit: contain;
  border-radius: 7px;
  overflow: hidden;
}
.couple-images__small-image {
  position: absolute;
  z-index: 1;
  right: 0;
  bottom: 0;
  max-width: 20%;
  box-shadow: 0 15px 30px rgba(47, 47, 57, 0.3);
}
.couple-images__small-image img {
  width: 100%;
  object-fit: contain;
  border-radius: 15px;
  overflow: hidden;
}
@media (max-width: 48em) {
  .couple-images__small-image img {
    border-radius: 7px;
  }
}
@media (max-width: 30em) {
  .couple-images__small-image img {
    border-radius: 4px;
  }
}

@supports (margin-bottom: clamp( 3.75rem , 2.6661849711rem  +  4.6242774566vw , 6.25rem )) {
  .nuero-about {
    margin-bottom: clamp( 3.75rem , 2.6661849711rem  +  4.6242774566vw , 6.25rem );
  }
}
@supports not (margin-bottom: clamp( 3.75rem , 2.6661849711rem  +  4.6242774566vw , 6.25rem )) {
  .nuero-about {
    margin-bottom: calc(3.75rem + 2.5 * (100vw - 23.4375rem) / 54.0625);
  }
}
@media (max-width: 48em) {
  .nuero-about__container {
    padding: 0 30px;
  }
}
.nuero-about__project {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}
@supports (margin-bottom: clamp( 1.875rem , 0.5202312139rem  +  5.7803468208vw , 5rem )) {
  .nuero-about__project {
    margin-bottom: clamp( 1.875rem , 0.5202312139rem  +  5.7803468208vw , 5rem );
  }
}
@supports not (margin-bottom: clamp( 1.875rem , 0.5202312139rem  +  5.7803468208vw , 5rem )) {
  .nuero-about__project {
    margin-bottom: calc(1.875rem + 3.125 * (100vw - 23.4375rem) / 54.0625);
  }
}
@media (max-width: 48em) {
  .nuero-about__project {
    flex-direction: column;
  }
}
.nuero-about__main {
  max-width: 590px;
  width: 100%;
  padding-right: 20px;
}
@media (max-width: 48em) {
  .nuero-about__main {
    padding-right: 0;
    margin-bottom: 30px;
    max-width: none;
  }
}
.nuero-about__title {
  margin-bottom: 30px;
}
@media (max-width: 48em) {
  .nuero-about__title {
    margin-bottom: 10px;
  }
}
.nuero-about__text:not(:last-child) {
  margin-bottom: 15px;
}
.nuero-about__text span {
  color: #feff80;
}
.nuero-about__nft {
  max-width: 380px;
  width: 100%;
  padding-left: 30px;
  position: relative;
}
.nuero-about__nft::before {
  content: "";
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  width: 3px;
  height: 100%;
  background: #feff80;
}
@media (max-width: 48em) {
  .nuero-about__nft {
    padding-left: 20px;
    max-width: none;
  }
}
.nuero-about__aside-title {
  margin-bottom: 20px;
}
@media (max-width: 48em) {
  .nuero-about__aside-title {
    margin-bottom: 10px;
  }
}
@media (max-width: 48em) {
  .nuero-about__users {
    margin: 0 -20px;
  }
}

.users-about {
  padding: 30px;
  background: #e9e9e9;
  color: #2f2f39;
}
@media (max-width: 48em) {
  .users-about {
    padding: 20px;
  }
}
.users-about__title {
  margin-bottom: 30px;
  padding-bottom: 15px;
  position: relative;
}
.users-about__title::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 3px;
  background: #2f2f39;
}
@media (max-width: 48em) {
  .users-about__title {
    margin-bottom: 20px;
  }
}
@media (min-width: 48em) {
  .users-about__inner {
    display: flex;
    margin: 0 -30px;
  }
}
@media (min-width: 48em) {
  .users-about__user {
    padding: 0 30px;
    flex: 0 1 50%;
  }
}

.about-user:first-child {
  position: relative;
}
.about-user:first-child::after {
  content: "";
  position: absolute;
  right: 0;
  bottom: 0;
  display: inline-block;
  width: 1px;
  height: 100%;
  background: url("../img/icons/vertical-dash.svg") 0 0 repeat-y;
}
@media (max-width: 48em) {
  .about-user:first-child {
    padding-bottom: 15px;
    margin-bottom: 15px;
  }
  .about-user:first-child::after {
    width: 100%;
    height: 1px;
    bottom: 0;
    right: 0;
    background: url("../img/icons/horisontal-dash.svg") 0 0 repeat-x;
  }
}
.about-user__title {
  margin-bottom: 10px;
}

@supports (margin-bottom: clamp( 3.75rem , 2.6661849711rem  +  4.6242774566vw , 6.25rem )) {
  .nuero-composition__header {
    margin-bottom: clamp( 3.75rem , 2.6661849711rem  +  4.6242774566vw , 6.25rem );
  }
}
@supports not (margin-bottom: clamp( 3.75rem , 2.6661849711rem  +  4.6242774566vw , 6.25rem )) {
  .nuero-composition__header {
    margin-bottom: calc(3.75rem + 2.5 * (100vw - 23.4375rem) / 54.0625);
  }
}
/* ... */

